--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>AI Universe Hub</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/896bf47389.js" crossorigin="anonymous"></script>
 </head>
 
 <body onload="loadAllTools()">
@@ -19,17 +20,29 @@
   <!-- main section start-->
   <main>
     <section class="container mx-auto">
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5" id="card-tools">
         <!-- all all cards here -->
-        <!-- <div class="card w-[90%] lg:w-full bg-base-100 shadow-xl border-2 mx-auto">
+        <!-- <div class="card w-[90%] lg:w-full bg-base-100 shadow-xl border-2 mx-auto p-6">
           <figure class="px-10 pt-10">
             <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
           </figure>
-          <div class="card-body items-center text-center">
-            <h2 class="card-title">Shoes!</h2>
-            <p>If a dog chews shoes whose shoes does he choose?</p>
-            <div class="card-actions">
-              <button class="btn btn-primary">Buy Now</button>
+          <div class="card-body">
+            <h2 class="card-title text-2xl">Features</h2>
+            <ol class="list-decimal list-inside">
+              <li>Now this is a story all about</li>
+              <li>how, my life got flipped-turned</li>
+              <li>my life got flipped-upside down</li>
+            </ol>
+            <hr class="border-[1px] mt-5">
+            <h2 class="card-title text-2xl mt-5 mb-4">ChatGPT</h2>
+            <div class="flex justify-between items-center">
+              <div class="flex items-center gap-2">
+                <i class="fa-regular fa-calendar-days"></i>
+                <h2>11/01/2022</h2>
+              </div>
+              <div class="bg-red-50 p-3 rounded-full">
+                <i class="fa-solid fa-arrow-right text-red-400"></i>
+              </div>
             </div>
           </div>
         </div> -->
