implement show all

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div id="spinner" class="w-12 h-12 rounded-full animate-spin hidden mx-auto
                     border-2 border-solid border-blue-500 border-t-transparent"></div>
     </section>
-    <section class="container mx-auto">
+    <section class="container mx-auto mb-12">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5" id="card-tools">
         <!-- show all cards here -->
       </div>
     </section>
     <section class="show_all text-center">
-      <button id="show-more-button" class="btn btn-sm lg:btn-md btn-error my-12 hidden">Show More</button>
+      <button id="show-more-button" class="btn btn-sm lg:btn-md btn-error mb-12 hidden">Show More</button>
     </section>
   </main>
   <!-- main section end-->
