dynamic modal done

--- a/index.html
+++ b/index.html
@@ -37,56 +37,7 @@
   <!-- modal -->
   <input type="checkbox" id="my-modal-3" class="modal-toggle" />
   <div class="modal" id="modal-body">
-    <div class="modal-box w-[90%] max-w-5xl">
-      <label for="my-modal-3"
-        class="btn btn-sm btn-circle absolute right-2 top-2 bg-red-500 border-0 hover:bg-red-600">✕</label>
-      <!-- details modal -->
-      <div class="flex flex-col md:flex-row gap-5">
-        <!-- detail left div -->
-        <div class="bg-red-50 p-7 border-red-400 border-[1px] rounded-xl lg:w-1/2">
-          <h1 class="text-2xl font-semibold">ChatGPT is an AI-powered chatbot platform that uses OpenAI's GPT technology
-            to simulate
-            human conversation.</h1>
-          <div class="flex flex-col md:flex-row justify-between my-6 gap-4 text-center">
-            <div class="bg-white py-5 px-5 text-lime-600 rounded-xl font-semibold">
-              <p>$10/month</p>
-              <p>Basic</p>
-            </div>
-            <div class="bg-white py-5 px-5 text-amber-600 rounded-xl font-semibold">
-              <p>$50/month</p>
-              <p>Pro</p>
-            </div>
-            <div class="bg-white py-5 px-5 text-red-600 rounded-xl font-semibold">
-              <p>Contact us</p>
-              <p>Enterprise</p>
-            </div>
-          </div>
-          <div class="flex flex-col md:flex-row justify-between gap-4">
-            <div>
-              <h1 class="text-2xl font-semibold mb-4">Features</h1>
-              <ul class="list-disc list-inside">
-                <li>Customizable responses</li>
-                <li>Multilingual support</li>
-                <li>Seamless integration</li>
-              </ul>
-            </div>
-            <div>
-              <h1 class="text-2xl font-semibold  mb-4">Integrations</h1>
-              <ul class="list-disc list-inside">
-                <li>FB Messenger</li>
-                <li>Slack</li>
-                <li>Telegram</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- detail right div -->
-        <div class="p-7 border-[1px] rounded-xl  lg:w-1/2 text-center mb-4">
-          <h1 class="text-2xl font-semibold">Hi, how are you doing today?</h1>
-          <h1 class="">I'm doing well, thank you for asking. How can I assist you today?</h1>
-        </div>
-      </div>
-    </div>
+    <!-- place modal here -->
   </div>
   <script src="js/script.js"></script>
 </body>
