--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body onload="loadAllTools()">
   <header class="text-center my-12">
     <h1 class="font-semibold text-[2.5rem] mb-7">AI Universe Hub</h1>
-    <button class="btn btn-sm lg:btn-md btn-error">Sort By Date</button>
+    <button id="sort-by-date" class="btn btn-sm lg:btn-md btn-error">Sort By Date</button>
   </header>
 
   <!-- main section start-->
@@ -29,7 +29,7 @@
       </div>
     </section>
     <section class="show_all text-center">
-      <button id="show-more-button" class="btn btn-sm lg:btn-md btn-error mb-12 hidden">Show More</button>
+      <button id="show-more-button" class="btn btn-sm lg:btn-md btn-error mb-12">Show More</button>
     </section>
   </main>
   <!-- main section end-->
