fixed some responsiveness issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/896bf47389.js" crossorigin="anonymous"></script>
 </head>
 
-<body onload="loadAllTools()">
+<body onload="loadAllTools()" class="container mx-auto md:p-6">
   <header class="text-center my-12">
     <h1 class="font-semibold text-[2.5rem] mb-7">AI Universe Hub</h1>
     <button id="sort-by-date" class="btn btn-sm lg:btn-md btn-error">Sort By Date</button>
